navigation mobile hover fix

--- a/src/app/custom-components/navigation-header/navigation-item/navigation-item.component.scss
+++ b/src/app/custom-components/navigation-header/navigation-item/navigation-item.component.scss
@@ -10,6 +10,10 @@
       cursor: pointer;
       background-color: $color-grey-50;
 
+      @include breakpoint-sm() {
+        background-color: transparent;
+      }
+
       .arrow-right {
         opacity: 1 !important;
         transform: translateX(0) !important;
